--- a/.github/index.html
+++ b/.github/index.html
@@ -5,11 +5,7 @@
     <title>title</title>
 </head>
 <body>
-    jajajass 
-
-    sdløkfgjdflkgjdfpøl¨gk
-    åpoiijwert90uoirewtokmdsf
-
-    i am a big homosexual
+    telelelelelelele
+    aaw
 </body>
 </html>
