--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <h1>Hello world!</h1>
     <p>Welcome to my first website.</p>
     <h2>Web Security</h2>
-    <p id="web-security-question">How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
-    <p id="web-security-answer">[Answer here]</p>
+    <p id="web-security-question">
+
+      How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
+   
+   
+    <p id="web-security-answer">
+
+      Depending on the client’s needs, experience and knowledge. When selecting web hosting services I would make a smaller presentation going over common threats and which counter-measures are included with different providers. 
+      Since the biggest risk is human error I would also provide information on basic do’s and don’ts: don’t open email attachments without caution, don’t open hyperlinks without verifying their destination, encourage proper password management, etc. 
+      This is extra important for the people managing the site on the client’s side, and reminders are valuable even for the tech savvy. Implementing other protocols like login timeouts, two-factor authentication etc. are also important tools to limiting risk
+      from human error.
+      
+    </p>
+
+
   </body>
 </html>
