--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
-<<head>
-    <title>My first website</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
-    <h2>Web Security</h2>
-    <p id="web-security-question">
-
-      How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
-   
-   
-    <p id="web-security-answer">
-
-      Depending on the client’s needs, experience and knowledge. When selecting web hosting services I would make a smaller presentation going over common threats and which counter-measures are included with different providers. 
-      Since the biggest risk is human error I would also provide information on basic do’s and don’ts: don’t open email attachments without caution, don’t open hyperlinks without verifying their destination, encourage proper password management, etc. 
-      This is extra important for the people managing the site on the client’s side, and reminders are valuable even for the tech savvy. Implementing other protocols like login timeouts, two-factor authentication etc. are also important tools to limiting risk
-      from human error.
-      
-    </p>
+<head>
+  <title>My first website</title>
+  <link href="css/styles.css" rel="stylesheet">
+</head>
 
 
-  </body>
+
+<body>
+  <nav>
+    <
+  </nav>
+
+
+  <h1>Hello world!</h1>
+  <p>Welcome to my first website.</p>
+  <h2>Web Security</h2>
+  <p id="web-security-question">
+    How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
+ 
+ 
+  <p id="web-security-answer">
+    Depending on the client’s needs, experience and knowledge. When selecting web hosting services I would make a smaller presentation going over common threats and which counter-measures are included with different providers. 
+    Since the biggest risk is human error I would also provide information on basic do’s and don’ts: don’t open email attachments without caution, don’t open hyperlinks without verifying their destination, encourage proper password management, etc. 
+    This is extra important for the people managing the site on the client’s side, and reminders are valuable even for the tech savvy. Implementing other protocols like login timeouts, two-factor authentication etc. are also important tools to limiting risk
+    from human error.
+  </p>
+</body>
+
+<footer>
+  &copy; 2023 rainydays.com
+</footer>
 </html>
