--- a/index.html
+++ b/index.html
@@ -8,9 +8,41 @@
 
 
 <body>
-  <nav>
-    <
-  </nav>
+  <section>
+    <div>
+      <!--Logo svg?=-->
+    </div>
+    <div>
+      <!--søkeboks-->
+    </div>
+    
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">All Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <div>
+      <!--button Profil svg-->
+      <!--button cart svg-->
+    </div>
+  </section>  
+
+<section>
+  <img src="images/homepage_banner.jpg">
+  <p>Bad weather won't stop your running!</p>
+  <p>Browse our affordable and durable running jackets</p>
+  <button><a href=products.html>Shop Now</a></button>
+</section>
+
+<section>
+  <h1>Check out our newest products</h1>
+  <div>
+    <img src="ima"
+  </div>
+</section>
 
 
   <h1>Hello world!</h1>
