--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 
 <body>
-  <section>
-    <div>
+  <section class="header">
+    <div id="logo">
       <svg width="231" height="125" viewBox="0 0 231 125" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5.4543 54.1363V65.4006H8.39267C9.30457 65.4006 10.0304 65.2738 10.571 65.0201C11.1109 64.7664 11.5337 64.4032 11.8376 63.9292C12.1076 63.4558 12.2935 62.8723 12.3948 62.1786C12.4962 61.4856 12.5469 60.6818 12.5469 59.7684C12.5469 58.8551 12.4962 58.052 12.3948 57.3584C12.2935 56.6653 12.0909 56.0644 11.7871 55.557C11.145 54.6104 9.92908 54.1363 8.13929 54.1363H5.4543ZM0.286835 85.3924V49.2652H8.59531C14.6747 49.2652 17.7144 52.8003 17.7144 59.8699C17.7144 62.001 17.385 63.8111 16.7264 65.2992C16.0678 66.788 14.9106 67.9884 13.2562 68.9018L18.8288 85.3924H13.3575L8.54473 69.9672H5.4543V85.3924H0.286835Z" fill="#053641"/>
         <path d="M39.9036 72.758L37.3706 59.667H37.2693L34.7362 72.758H39.9036ZM27.137 85.3923L35.1921 49.2652H39.4984L47.5535 85.3923H42.386L40.8661 77.6291H33.8243L32.3044 85.3923H27.137Z" fill="#053641"/>
@@ -79,88 +79,86 @@
   </section>  
 
 
-
-
-<!--banner med tekst + rød knapp-->
-<section>
-  <img src="images/homepage_banner.jpg">
-  <p>Bad weather won't stop your running!</p>
-  <p>Browse our affordable and durable running jackets</p>
-  <button><a href=products.html>Shop Now</a></button>
-</section>
-
-
-
-<!--4 "nyheter" (fremheva produkter) -->
-<section>
-  <h1>Check out our newest products</h1>
-  
-  <div>
-    <img src="images/RainyDays_Jacket1.jpg">
-    <h4>Raincore</h4>
-    <p>With bib Unisex</p>
-    <h3>1349</h3>
-  </div>
-
-  <div>
-    <img src="images/RainyDays_Jacket6.jpg">
-    <h4>Raincore</h4>
-    <p>With bib Unisex</p>
-    <h3>1349</h3>
-  </div>
-
-  <div>
-    <img src="images/RainyDays_Jacket5.jpg">
-    <h4>Raincore</h4>
-    <p>With bib Unisex</p>
-    <h3>1349</h3>
-  </div>
-
-  <div>
-    <img src="images/RainyDays_Jacket3.jpg">
-    <h4>Raincore</h4>
-    <p>With bib Unisex</p>
-    <h3>1349</h3>
-  </div>
-</section>
+<main>  
+  <!--banner med tekst + rød knapp-->
+  <section>
+    <img src="images/homepage_banner.jpg">
+    <h1>Bad weather won't stop your running!</h1>
+    <h2>Browse our affordable and durable running jackets</h2>
+    <button><a href=products.html>Shop Now</a></button>
+  </section>
 
 
 
-<section>
-  <!--To reklamebilder med knapp og tekst-->
-  <div>
-    <img src="images/father_son.jpg">
-    <p>Make the outdoors affordable for your whole family</p>
-    <button>Shop Now</button>
-  </div>
-  
-  <div>
-    <img src="images/blue_raincoat.jpg">
-    <p>Why choose Rainydays?</p>
-    <button>Learn more</button>
-  </div>
-</section>
+  <!--4 "nyheter" (fremheva produkter) -->
+  <section>
+    <h1>Check out our newest products</h1>
+
+    <div>
+      <img src="images/RainyDays_Jacket1.jpg">
+      <h4>Raincore</h4>
+      <p>With bib Unisex</p>
+      <h3>1349</h3>
+    </div>
+
+    <div>
+      <img src="images/RainyDays_Jacket6.jpg">
+      <h4>Raincore</h4>
+      <p>With bib Unisex</p>
+      <h3>1349</h3>
+    </div>
+
+    <div>
+      <img src="images/RainyDays_Jacket5.jpg">
+      <h4>Raincore</h4>
+      <p>With bib Unisex</p>
+      <h3>1349</h3>
+    </div>
+
+    <div>
+      <img src="images/RainyDays_Jacket3.jpg">
+      <h4>Raincore</h4>
+      <p>With bib Unisex</p>
+      <h3>1349</h3>
+    </div>
+  </section>
+
+
+
+  <section>
+    <!--To reklamebilder med knapp og tekst-->
+    <div>
+      <img src="images/father_son.jpg">
+      <p>Make the outdoors affordable for your whole family</p>
+      <button>Shop Now</button>
+    </div>
+
+    <div>
+      <img src="images/blue_raincoat.jpg">
+      <p>Why choose Rainydays?</p>
+      <button>Learn more</button>
+    </div>
+  </section>
 
 
 
 
 
-  <h1>Hello world!</h1>
-  <p>Welcome to my first website.</p>
-  <h2>Web Security</h2>
-  <p id="web-security-question">
-    How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
- 
- 
-  <p id="web-security-answer">
-    Depending on the client’s needs, experience and knowledge. When selecting web hosting services I would make a smaller presentation going over common threats and which counter-measures are included with different providers. 
-    Since the biggest risk is human error I would also provide information on basic do’s and don’ts: don’t open email attachments without caution, don’t open hyperlinks without verifying their destination, encourage proper password management, etc. 
-    This is extra important for the people managing the site on the client’s side, and reminders are valuable even for the tech savvy. Implementing other protocols like login timeouts, two-factor authentication etc. are also important tools to limiting risk
-    from human error.
-  </p>
-</body>
-
-
+    <h1>Hello world!</h1>
+    <p>Welcome to my first website.</p>
+    <h2>Web Security</h2>
+    <p id="web-security-question">
+      How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
+    
+    
+    <p id="web-security-answer">
+      Depending on the client’s needs, experience and knowledge. When selecting web hosting services I would make a smaller presentation going over common threats and which counter-measures are included with different providers. 
+      Since the biggest risk is human error I would also provide information on basic do’s and don’ts: don’t open email attachments without caution, don’t open hyperlinks without verifying their destination, encourage proper password management, etc. 
+      This is extra important for the people managing the site on the client’s side, and reminders are valuable even for the tech savvy. Implementing other protocols like login timeouts, two-factor authentication etc. are also important tools to limiting risk
+      from human error.
+    </p>
+  </body>
+</main>
 
 <footer>
 
