--- a/index.html
+++ b/index.html
@@ -174,13 +174,12 @@
 
   <footer>
   
-  <div>
-    <img src="images/Rainydays-logo.svg">
-  </div>
+    <img class="footerlogo" src="images/Rainydays-logo.svg" alt="Rainydays logo">
+    
 
 
 
-    <nav>
+    <nav class="footernav">
       <h3>Navigation</h3>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -189,33 +188,28 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-  
-    <section>
+
+    <div class="socials">
       <h3>Follow Us</h3>
-      <!--Youtubelenke-->
-      <!--Facebooklenke-->
-      <!--Mailto-->
-    </section>
-  
-    <section>
+      <a href=""><img id="youtube" src="images/youtube.svg"></a>
+      <a href=""><img id="facebook" src="images/facebook.svg"></a>
+      <a href=""><img id="mailto" src="images/mailto.svg"></a>
+    </div>
+
+    <div class="info">
       <h3>Rainydays LLC</h3>
-      <ul>
-        <li><h4>Outdoors 43</h4></li>
-        <li><h4>0945 329 1995</h4></li>
-        <li><h4>0000 Hikeland</h4></li>
-       </ul>
-       <ul>
-        <li><h4>Phone:</h4></li>
-        <li><h4>0945 329 1995</h4></li>
-      </ul>
-    </section>
-  
-  
-    <section>
+      <h4>Outdoors 43</h4>
+      <h4>0945 329 1995</h4>
+      <h4>0000 Hikeland</h4>
+      <h4>Phone:</h4>
+      <h4>0945 329 1995</h4>
+    </div>
+
+    <div class="bunn">
       <p>&copy; 2023 rainydays.com</p>
       <p>Terms and Service</p>
       <p>Privacy policy</p>
-    </section>
+    </div>
   </footer>
 
 
