--- a/checkout.html
+++ b/checkout.html
@@ -82,7 +82,7 @@
 
 
 
-<form class="form" action="/submit_form" method="post">
+<form class="form" action="" method="post">
     <label for="name">Name</label><br>
     <input type="text" id="name" name="name" placeholder="Name Nameson..."><br><br>
 
@@ -105,7 +105,7 @@
 
 <h2 id="paymentdetailsheadline">Payment details</h2>
 
-<form class="form cardform" action="/process_payment" method="post">
+<form class="form cardform" action="" method="post">
 
     <label for="card_name">Name on card</label><br>
     <input type="text" id="card_name" name="card_name" placeholder="Name Nameson..."><br><br>
