--- a/product_specific.html
+++ b/product_specific.html
@@ -53,7 +53,7 @@
   <main class="content">
 
     
-    <img id="slider" src="images/RainyDays_Jacket3.jpg" />
+    <img id="slider" src="images/RainyDays_Jacket3.jpg" alt="Slider product images"/>
 
     <div class="infobox">
         <h1>Raincore Repellent Run20 Softshell Jacket, Men, red</h1>
